# ThematicAnalysis

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  config.py  main.py
app/analysis/: aggregation.py  coding_rules.py  feature_extractor.py  reliability.py  scoring.py  thematic_engine.py  theme_generation.py  theme_review.py
app/annotation/: adjudication.py  ai_annotation_interface.py  human_annotation.py
app/cli/: commands.py
app/codebook/: loader.py  schema.py  validators.py
app/db/: database.py  models.py
app/framework/: audit_trail.py  braun_clarke.py  methodological_phases.py  trustworthiness.py
app/ingestion/: loaders.py  parsers.py  validators.py
app/memos/: memo_manager.py  reflexive_journal.py
app/preprocessing/: cleaners.py  normalizers.py  segmenters.py
app/reports/: exporters.py  templates.py
data/raw/: demo_annotations.csv  demo_conversations.csv
docs/: architecture.md  codebook_format.md  database_schema.md  thematic_analysis_workflow.md  theoretical_framework.md  trustworthiness_and_audit_trail.md
tests/: conftest.py  test_audit_trail.py  test_codebook_validation.py  test_database.py  test_framework_phases.py  test_ingestion.py  test_reliability.py  test_reporting.py  test_thematic_engine.py
web/: .env.example  .gitignore  Dockerfile.web  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/nginx/: default.conf
web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
web/src/api/: runs.ts  (+11 more)
(+64 files in other folders)
