[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conversation-thematic-analysis"
version = "0.1.0"
description = "Configurable Python + SQL application for thematic analysis of conversations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "SQLAlchemy>=2.0",
  "pydantic>=2.0",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0",
  "pandas>=2.0",
  "typer>=0.9",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "docs*", "tests*", "web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
